@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2011 Red Hat, Inc.
+# Copyright (C) 2011, 2018 Red Hat, Inc.
 # This file is part of elfutils.
 #
 # This file is free software; you can redistribute it and/or modify
@@ -20,5 +20,46 @@
 testfiles testfile14
 
 testrun >/dev/null ${abs_top_builddir}/src/readelf -w testfile14 testfile14
+
+testrun_compare ${abs_top_builddir}/src/readelf --debug-dump=loc testfile14 testfile14 << EOF
+
+testfile14:
+
+
+DWARF section [33] '.debug_loc' at offset 0xca9:
+
+ CU [     b] base: 0x0000000000400468 <caller>
+ [     0] range 34, 35
+          0x000000000040049c <main>..
+          0x000000000040049c <main>
+           [ 0] breg7 -8
+          range 35, 46
+          0x000000000040049d <main+0x1>..
+          0x00000000004004ad <main+0x11>
+           [ 0] breg7 0
+          range 46, 47
+          0x00000000004004ae <main+0x12>..
+          0x00000000004004ae <main+0x12>
+           [ 0] breg7 -8
+
+testfile14:
+
+
+DWARF section [33] '.debug_loc' at offset 0xca9:
+
+ CU [     b] base: 0x0000000000400468 <caller>
+ [     0] range 34, 35
+          0x000000000040049c <main>..
+          0x000000000040049c <main>
+           [ 0] breg7 -8
+          range 35, 46
+          0x000000000040049d <main+0x1>..
+          0x00000000004004ad <main+0x11>
+           [ 0] breg7 0
+          range 46, 47
+          0x00000000004004ae <main+0x12>..
+          0x00000000004004ae <main+0x12>
+           [ 0] breg7 -8
+EOF
 
 exit 0
