@@ -1,3 +1,7 @@
+2018-05-29  Mark Wielaard  <mark@klomp.org>
+
+	* run-readelf-twofiles.sh: Add --debug-dump=loc testcase.
+
 2018-05-28  Mark Wielaard  <mark@klomp.org>
 
 	* run-readelf-info-plus.sh: New test.
